<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/main_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<VideoView
		android:id="@+id/videoview"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />

<ScrollView
	android:layout_width="match_parent"
	android:layout_height="match_parent"></ScrollView>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center_vertical|center_horizontal|center"
		android:orientation="vertical">

		<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:fontFamily="@font/labsansfontfamily"
			android:gravity="center_vertical|center_horizontal"
			android:layout_margin="40dp"
			android:textSize="45dp"
			android:text="@string/app_name" />
<ScrollView

	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:gravity="center"

			android:layout_marginLeft="60dp"
			android:layout_marginRight="60dp"
			>

			<Button
				android:layout_margin="8dp"
				android:padding="8dp"

				android:id="@+id/btn_main_choose_encode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/button_bg"
				android:text="@string/encode_video_string"
				android:textSize="22sp" />

			<Button
				android:layout_margin="8dp"
				android:padding="8dp"

				android:id="@+id/btn_main_choose_decode"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/button_bg"
				android:text="@string/decode_video_string"
				android:textSize="22sp" />

			<Button
				android:id="@+id/btn_main_send_video"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:background="@drawable/button_bg"
				android:padding="8dp"
				android:text="@string/main_send_video"
				android:textSize="22sp"
				android:visibility="visible" />

			<Button
				android:id="@+id/btn_main_choose_settings"
				android:layout_width="match_parent"

				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:background="@drawable/button_bg"
				android:padding="8dp"
				android:text="@string/settings_string"
				android:textSize="22sp" />

			<Button
				android:id="@+id/btn_main_choose_about"
				android:layout_width="match_parent"

				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:background="@drawable/button_bg"
				android:padding="8dp"
				android:text="@string/about_string"
				android:textSize="22sp" />

		</LinearLayout>
</ScrollView>
	</LinearLayout>


</android.support.constraint.ConstraintLayout>

