<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="activities.SettingsActivity" >
     
	<!-- Title bar -->
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/accent_material_dark_1"
		android:minHeight="56dp">

		<ImageButton
			android:id="@+id/btn_back_settings"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_centerInParent="true"
			android:layout_marginLeft="7dp"
			android:background="@android:color/transparent"
			android:contentDescription="@string/back_string"
			android:minHeight="45dip"
			android:minWidth="25dip"
			android:src="@drawable/ic_ab_back_holo_dark_am" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_toRightOf="@id/btn_back_settings"
			android:paddingBottom="10dp"
			android:paddingLeft="5dp"
			android:paddingTop="10dp"
			android:text="@string/settings_string"
			android:textColor="#FFFFFF"
			android:textSize="22sp" />



	</RelativeLayout>



	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">






		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">



			<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
				android:id="@+id/card_view"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_margin="8dp"
				android:padding="8dp"
				card_view:cardCornerRadius="8dp">

				<LinearLayout
					android:padding="4dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical">

					<TextView
						style="?android:attr/listSeparatorTextViewStyle"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/audio_string"
						android:textSize="20sp" />

					<RelativeLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="match_parent"
							android:paddingLeft="10dp"
							android:layout_alignParentLeft="true"
							android:layout_centerInParent="true"
							android:textSize="18sp"
							android:text="@string/use_audio_channel_string"/>

						<CheckBox
							android:id="@+id/chk_box_audio_channel"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_alignParentRight="true"/>

					</RelativeLayout>
					<Spinner
						android:id="@+id/spinner_audio_algorithm"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="5dp"
						android:layout_marginRight="5dp"
						android:prompt="@string/audio_channel_string"/>
				</LinearLayout>
			</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:id="@+id/card_view2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="8dp"
			android:padding="8dp"
			card_view:cardCornerRadius="8dp">

		<LinearLayout
			android:padding="4dp"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<TextView
		    	android:layout_height="wrap_content"
	    		android:layout_width="match_parent"
	    		android:paddingLeft="10dp"
	    		android:text="@string/video_string"
	    		android:textSize="20sp"
	   	 		style="?android:attr/listSeparatorTextViewStyle" />

	       <RelativeLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
        
		        <TextView
		    		android:layout_width="wrap_content"
			    	android:layout_height="match_parent"
			    	android:paddingLeft="10dp"
					android:layout_alignParentLeft="true"
					android:layout_centerInParent="true"	    		
		    		android:textSize="18sp"				    		
					android:text="@string/use_video_channel_string"/>
		           
		        <CheckBox
			        android:id="@+id/chk_box_video_channel"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_alignParentRight="true"/>
	        	        
			</RelativeLayout>    	    	    	    
		
		    <Spinner
		        android:id="@+id/spinner_video_algorithm"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" 
		        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:prompt="@string/video_channel_string"/>
		</LinearLayout>
		</android.support.v7.widget.CardView>


			<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
				android:id="@+id/card_view2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_margin="8dp"
				android:padding="8dp"
				card_view:cardCornerRadius="8dp">

				<LinearLayout
					android:padding="4dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical">


       
			<TextView
		    	android:layout_height="wrap_content"
	    		android:layout_width="match_parent"
	    		android:paddingLeft="10dp"
	    		android:textSize="20sp"
	    		android:text="@string/cryptography_string"
	   	 		style="?android:attr/listSeparatorTextViewStyle" />
		
			<RelativeLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
        
		        <TextView
		    		android:layout_width="wrap_content"
			    	android:layout_height="match_parent"
			    	android:paddingLeft="10dp"
					android:layout_alignParentLeft="true"
					android:layout_centerInParent="true"	    		
		    		android:textSize="18sp"				    		
					android:text="@string/use_cryptography_string"/>
		           
		        <CheckBox
			        android:id="@+id/chk_box_cryptography"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
					android:layout_alignParentRight="true"/>
	        	        
			</RelativeLayout>
		
			<Spinner
		        android:id="@+id/spinner_cryptography_algorithm"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
	   	        android:layout_marginLeft="5dp"
		        android:layout_marginRight="5dp"
		        android:prompt="@string/metadata_channel_string"/>

		</LinearLayout>
	</android.support.v7.widget.CardView>

		</LinearLayout>
		
	</ScrollView>
	
</LinearLayout>

